# unused-includes-rs

./: .gitignore  Cargo.toml  README.md
src/: analyze.rs  clangfmt.rs  compilations.rs  dependencies.rs  fileio.rs  main.rs  util.rs
src/analyze/: includes.rs  mod.rs
tests/: Base.hpp  Main.cpp
tests/include/: External.hpp
tests/include/ref/: ExternalRef.hpp
tests/refs/: Functions.hpp  TemplFunctions.hpp  TemplParam.hpp
tests/src/: Main.cpp  Sub.hpp  TestClangIncl.cpp  Unused.hpp
tests/src/refs/: Classes.hpp  ClassesT.cpp  FunctionsT.cpp  IgnoreT.cpp  IncompleteType.hpp  IncompleteTypeDef.hpp  IncompleteTypeInd.hpp  IncompleteTypeT.cpp  InsideMacro.hpp  InsideMacroT.cpp  InsideTemplate.hpp  InsideTemplateT.cpp  Macros.hpp  MacrosT.cpp  Main.cpp  TemplClasses.hpp  TemplClassesT.cpp  TemplFunctionsT.cpp  TemplParamT.cpp  Typedef.hpp  TypedefInner.hpp  TypedefT.cpp  Using.hpp  UsingInner.hpp  UsingT.cpp
