[package]
name = "unused-includes-rs"
version = "0.1.0"
authors = ["Lars Wrenger <lars@wrenger.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "0.23.0", features = ["clang_8_0"] }
structopt = "0.3"
shlex = "0.1"
multimap = "0.8"
glob = "0.3"
regex = "1.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
