[package]
name = "unused-includes-rs"
version = "0.1.0"
authors = ["Lars Wrenger <lars@wrenger.net>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
clang = { version = "1.0.2", features = ["clang_8_0"] }
structopt = "0.3.20"
shlex = "0.1.1"
multimap = "0.8.2"
regex = "1.4.1"
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
