[package]
name = "unused-includes-rs"
version = "0.1.0"
authors = ["Lars Wrenger <lars@wrenger.net>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
clang = { version = "1.0.3", features = ["clang_10_0"] }
structopt = "0.3.25"
shlex = "1.1.0"
multimap = "0.8.3"
regex = "1.5.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
